--- a/book_a5.tex
+++ b/book_a5.tex
@@ -1,4 +1,5 @@
-\documentclass[9pt, twoside, a5paper, titlepage, openright, draft]{memoir}
+%\documentclass[9pt, twoside, a5paper, titlepage, openright, draft]{memoir}
+\documentclass[9pt, twoside, a5paper, titlepage, openany, draft]{memoir}
 \input{preamble}
 
 %\setmonofont[Scale=0.9]{Negerns Courier}
@@ -84,6 +85,60 @@ $endif$
 $for(header-includes)$
 $header-includes$
 $endfor$
+
+% Page styles
+% -----------
+
+% Redefinition of the plain style:
+\fancypagestyle{plain}{%
+\fancyhf{} % clear all header and footer fields
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\footrulewidth}{0.0pt}
+\fancyfoot[RO]{\bfseries\large\thepage}
+% Display draft info
+\ifdraftdoc
+\fancyfoot[RE]{\bfseries\textit{Draft \today}}
+\fancyfoot[LO]{\bfseries\textit{Draft \today}}
+\fi}
+
+\pagestyle{fancy}
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\footrulewidth}{0.0pt}
+%\renewcommand{\chaptermark}[1]{\markboth{\MakeUppercase{\chaptername}\space\thechapter:\space#1}{}}
+\renewcommand{\chaptermark}[1]{\markboth{#1}{}}
+\renewcommand{\sectionmark}[1]{\markright{#1}{}}
+\renewcommand{\subsectionmark}[1]{\markright{#1}{}}
+\fancyhf{} % clear all header and footer fields
+\fancyhead[LE]{\bfseries\large\thepage\space\space\space\space\space\space\space\space\leftmark}
+\fancyhead[RE]{\MakeUppercase{\chaptername}\space\thechapter}
+\fancyhead[RO]{\bfseries\rightmark\space\space\space\space\space\space\space\space\large\thepage}
+% Display draft info
+\ifdraftdoc
+\fancyfoot[RE]{\bfseries\textit{Draft \today}}
+\fancyfoot[LO]{\bfseries\textit{Draft \today}}
+\fi
+
+% Chapter style
+% -------------
+\makechapterstyle{negerns}{%
+\setlength{\beforechapskip}{0pt}
+\renewcommand*{\chapnamefont}{\raggedleft\LARGE\scshape}
+\renewcommand*{\chapnumfont}{\raggedleft\Huge}
+\renewcommand*{\printchapternonum}{%
+\vphantom{\printchaptername}%
+\vphantom{\chapnumfont 1}%
+\afterchapternum}
+\renewcommand*{\chaptitlefont}{\raggedleft\huge\bfseries\itshape\fontfamily{ptm}\selectfont}
+\renewcommand*{\printchaptertitle}[1]{%
+\vskip -\onelineskip
+\hrule\vskip\onelineskip \centering\chaptitlefont ##1\\[3ex]}
+}
+
+% Section styles
+% --------------
+\setsecheadstyle{\LARGE\bfseries\itshape\fontfamily{ptm}\selectfont}
+\setsubsecheadstyle{\Large\bfseries\itshape\fontfamily{ptm}\selectfont}
+\setsubsubsecheadstyle{\large\bfseries\itshape\fontfamily{ptm}\selectfont}
 
 \chapterstyle{negerns}
 \chapterstyle{}
