--- a/preamble.tex
+++ b/preamble.tex
@@ -1,4 +1,4 @@
-\usepackage[top=0.80in, bottom=0.75in, left=0.5in, right=0.5in, footskip=0.3in, bindingoffset=0.25in]{geometry}
+%\usepackage[top=0.80in, bottom=0.75in, left=0.5in, right=0.5in, footskip=0.3in, bindingoffset=0.25in]{geometry}
 
 \usepackage{graphicx}
 \usepackage{amssymb,amsmath}
@@ -43,20 +43,6 @@
 % Footnote
 % --------
 \renewcommand{\footnoterule}{\noindent\smash{\rule[5pt]{1.0in}{0.1pt}}}
-
-% Table of contents
-% -----------------
-\hypersetup{linkcolor=black}
-\setsecnumdepth{subsection}
-\settocdepth{subsection}
-\renewcommand{\cftchapterfont}{\bfseries\large}
-\renewcommand{\cftsectionfont}{\normalsize\bfseries}
-\renewcommand{\cftsubsectionfont}{\normalsize}
-\renewcommand{\cftsectiondotsep}{\cftnodots}
-\setlength{\cftbeforesectionskip}{0.3em}
-\setlength{\cftbeforesubsectionskip}{0.08em}
-\setlength{\cftsectionindent}{0em}
-\setlength{\cftsubsectionindent}{2.1em}
 
 %\renewcommand*{\quotation}{\fontfamily{ptm}\selectfont\itshape}
 %\renewcommand*{\quote}{\quotation}{\endquotation}
