--- a/book_a5.tex
+++ b/book_a5.tex
@@ -1,5 +1,6 @@
 %\documentclass[9pt, twoside, a5paper, titlepage, openright, draft]{memoir}
 \documentclass[9pt, twoside, a5paper, titlepage, openany, draft]{memoir}
+\usepackage[top=0.80in, bottom=0.75in, left=0.5in, right=0.5in, footskip=0.3in, bindingoffset=0.25in]{geometry}
 \input{preamble}
 
 %\setmonofont[Scale=0.9]{Negerns Courier}
@@ -117,6 +118,20 @@ $endfor$
 \fancyfoot[RE]{\bfseries\textit{Draft \today}}
 \fancyfoot[LO]{\bfseries\textit{Draft \today}}
 \fi
+
+% Table of contents
+% -----------------
+\hypersetup{linkcolor=black}
+\setsecnumdepth{subsection}
+\settocdepth{subsection}
+\renewcommand{\cftchapterfont}{\bfseries\large}
+\renewcommand{\cftsectionfont}{\normalsize\bfseries}
+\renewcommand{\cftsubsectionfont}{\normalsize}
+\renewcommand{\cftsectiondotsep}{\cftnodots}
+\setlength{\cftbeforesectionskip}{0.3em}
+\setlength{\cftbeforesubsectionskip}{0.08em}
+\setlength{\cftsectionindent}{0em}
+\setlength{\cftsubsectionindent}{2.1em}
 
 % Chapter style
 % -------------
