--- a/book_a5.tex
+++ b/book_a5.tex
@@ -1,5 +1,4 @@
-%\documentclass[9pt, twoside, a5paper, titlepage, openright, draft]{memoir}
-\documentclass[9pt, twoside, a5paper, titlepage, openany, draft]{memoir}
+\documentclass[9pt, twoside, a5paper, titlepage, openright, draft]{memoir}
 \usepackage[top=0.80in, bottom=0.75in, left=0.5in, right=0.5in, footskip=0.3in, bindingoffset=0.25in]{geometry}
 \input{preamble}
 
