--- a/book_a4.tex
+++ b/book_a4.tex
@@ -1,15 +1,23 @@
-\documentclass[11pt, a4paper, titlepage, twoside, openright, draft]{memoir}
+\documentclass[10pt, a4paper, titlepage, twoside, openright, final]{memoir}
 \usepackage[top=1.0in, bottom=1.25in, left=1.0in, right=1.0in, footskip=0.4in, bindingoffset=0.5in]{geometry}
 
+\usepackage{ifxetex,ifluatex}
+% Package fixltx2e is not required with releases after 2015.
+% All fixes are now in the LaTeX kernel.
+% See the latexrelease package for details.
+% \usepackage{fixltx2e} % provides \textsubscript
+
+% Must be loaded here. Otherwise an 'Option class for package xcolor'
+% error occurs.
+% TODO: Determine which option it clashes with.
 \usepackage[svgnames]{xcolor}
 
-\usepackage{ifxetex,ifluatex}
-\usepackage{fixltx2e} % provides \textsubscript
 
-% System fonts
-% ------------
+
+% Fonts and Encoding
+% ------------------
+
 % If system fonts are going to be used, use fontspec.
-%
 %\ifxetex
     %\usepackage{fontspec}
     %\defaultfontfeatures{Ligatures=TeX} % To support LaTeX quoting style
@@ -29,169 +37,102 @@
 
 % Serif fonts
 % -----------
+\usepackage{charter}                        % {bch} *****
+% Used only to display sample text
 %\usepackage{lmodern}
-\usepackage{times}                          % {ptm}
+%\usepackage{times}                          % {ptm}
 %\usepackage{palatino}                       % {ppl}
-%\usepackage{charter}                        % {bch} *****
+%\usepackage{noto}
 %\usepackage{bookman}                        % {pbk}
 %\usepackage{concrete}                       % beton.sty not found
 %\usepackage{pslatex}
 %\usepackage{newcent}                        % {pnc}
 %\usepackage{kpfonts}
+%\usepackage{utopia}                         % {put}
 %\usepackage{pandora}                        % error on roman font
-%
-% 'default' option sets the default
-% font family to Source Sans Pro, not \sfdefault.
-%
-%\usepackage[default]{sourcesanspro}
 
 % Sans-serif fonts
 % ----------------
-%\usepackage{berasans}
 \usepackage[scaled=0.92]{helvet}            % {phv}
+% Used only to display sample text
+\usepackage[scaled=0.85]{berasans}          % {fvs}
 %\usepackage{cmbright}
 %\usepackage{kurier}
+%\usepackage{sourcesanspro}
 
 % Typewriter fonts
 % ----------------
 \usepackage[scaled=0.85]{beramono}          % {fvm}
-\usepackage[varl,scaled=1.02]{zi4}          % inconsolata typewriter font
+% Used only to display sample text
+\usepackage[varl,scaled=1.0]{zi4}           % Inconsolata typewriter font
 %\usepackage[scaled=0.95]{sourcecodepro}
 
-% Make default font
-% -----------------
+% Make default fonts
+% ------------------
+\renewcommand*\rmdefault{bch}               % Charter - I don't like how the italic looks'
+%\renewcommand*\rmdefault{ppl}               % Palatino
+%\renewcommand*\rmdefault{put}               % Utopia - Taller and a bit wider than Bitstream Charter'
 %\renewcommand*\rmdefault{ptm}               % Times
-\renewcommand*\rmdefault{ppl}               % Palatino
-%\renewcommand*\rmdefault{bch}               % Charter - I don't like how the italic looks'
-\renewcommand*\sfdefault{cmss}
-\renewcommand*\ttdefault{fvm}               % Bera mono
-%\setmonofont[Scale=0.9]{Negerns Courier}
+%\renewcommand*\rmdefault{pbk}               % Bookman
+%\renewcommand*\rmdefault{pnc}               % New Centurey Schoolbook
 
-$if(linestretch)$
-\usepackage{setspace}
-\setstretch{$linestretch$}
-$endif$
+\renewcommand*\sfdefault{lmss}              % Latin modern sans serif
+%\renewcommand*\sfdefault{cmss}
 
-\usepackage{amssymb,amsmath}
+\renewcommand*\ttdefault{zi4}               % Inconsolata *****
+%\renewcommand*\ttdefault{fvm}               % Bera mono
+%\renewcommand*\ttdefault{cmtt}              % Computer Modern Typewriter
+%\renewcommand*\ttdefault{lmtt}              % Latin Modern Typewriter
 
-%\ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
-%  \usepackage[$if(fontenc)$$fontenc$$else$T1$endif$]{fontenc}
-%  \usepackage[utf8]{inputenc}
-%  \usepackage{textcomp} % provides euro and other symbols
-%\else % if luatex or xelatex
-%$if(mathspec)$
-%  \ifxetex
-%    \usepackage{mathspec}
-%  \else
-%    \usepackage{unicode-math}
-%  \fi
-%$else$
-%  \usepackage{unicode-math}
-%$endif$
-%  \defaultfontfeatures{Ligatures=TeX,Scale=MatchLowercase}
-%$for(fontfamilies)$
-%  \newfontfamily{$fontfamilies.name$}[$fontfamilies.options$]{$fontfamilies.font$}
-%$endfor$
-%$if(mainfont)$
-%    \setmainfont[$for(mainfontoptions)$$mainfontoptions$$sep$,$endfor$]{$mainfont$}
-%$endif$
-%$if(sansfont)$
-%    \setsansfont[$for(sansfontoptions)$$sansfontoptions$$sep$,$endfor$]{$sansfont$}
-%$endif$
-%$if(monofont)$
-%    \setmonofont[Mapping=tex-ansi$if(monofontoptions)$,$for(monofontoptions)$$monofontoptions$$sep$,$endfor$$endif$]{$monofont$}
-%$endif$
-%$if(mathfont)$
-%$if(mathspec)$
-%  \ifxetex
-%    \setmathfont(Digits,Latin,Greek)[$for(mathfontoptions)$$mathfontoptions$$sep$,$endfor$]{$mathfont$}
-%  \else
-%    \setmathfont[$for(mathfontoptions)$$mathfontoptions$$sep$,$endfor$]{$mathfont$}
-%  \fi
-%$else$
-%  \setmathfont[$for(mathfontoptions)$$mathfontoptions$$sep$,$endfor$]{$mathfont$}
-%$endif$
-%$endif$
-%$if(CJKmainfont)$
-%  \ifxetex
-%    \usepackage{xeCJK}
-%    \setCJKmainfont[$for(CJKoptions)$$CJKoptions$$sep$,$endfor$]{$CJKmainfont$}
-%  \fi
-%$endif$
-%$if(luatexjapresetoptions)$
-%  \ifluatex
-%    \usepackage[$for(luatexjapresetoptions)$$luatexjapresetoptions$$sep$,$endfor$]{luatexja-preset}
-%  \fi
-%$endif$
-%$if(CJKmainfont)$
-%  \ifluatex
-%    \usepackage[$for(luatexjafontspecoptions)$$luatexjafontspecoptions$$sep$,$endfor$]{luatexja-fontspec}
-%    \setmainjfont[$for(CJKoptions)$$CJKoptions$$sep$,$endfor$]{$CJKmainfont$}
-%  \fi
-%$endif$
-%\fi
 
-% use upquote if available, for straight quotes in verbatim environments
-\IfFileExists{upquote.sty}{\usepackage{upquote}}{}
-% use microtype if available
-\IfFileExists{microtype.sty}{%
-\usepackage[$for(microtypeoptions)$$microtypeoptions$$sep$,$endfor$]{microtype}
-\UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
-}{}
 
-$if(verbatim-in-note)$
-\usepackage{fancyvrb}
-$endif$
-$if(colorlinks)$
-\usepackage{xcolor}
-$endif$
-%
-% Use final=true so we could see the hyperlinks
-%
-\usepackage[final=true,colorlinks=true,linkcolor=red]{hyperref}
+% Hyperlinks
+% ==========
+
+% Change color of hyperlinks in draft mode only
+\ifdraftdoc
+    \usepackage[final=true,colorlinks=true,linkcolor=NavyBlue,citecolor=Blue,urlcolor=NavyBlue]{hyperref}
+\else
+    \usepackage[final=true,colorlinks=true,linkcolor=NavyBlue,citecolor=Blue,urlcolor=NavyBlue]{hyperref}
+\fi
 \hypersetup{
-$if(title-meta)$
-            pdftitle={$title-meta$},
-$endif$
-$if(author-meta)$
-            pdfauthor={$author-meta$},
-$endif$
-$if(keywords)$
-            pdfkeywords={$for(keywords)$$keywords$$sep$, $endfor$},
-$endif$
-$if(colorlinks)$
-            colorlinks=true,
-            linkcolor=$if(linkcolor)$$linkcolor$$else$Maroon$endif$,
-            citecolor=$if(citecolor)$$citecolor$$else$Blue$endif$,
-            urlcolor=$if(urlcolor)$$urlcolor$$else$Blue$endif$,
-$else$
-            pdfborder={0 0 0},
-$endif$
-            breaklinks=true}
+    $if(title-meta)$
+        pdftitle={$title-meta$},
+    $endif$
+    $if(author-meta)$
+        pdfauthor={$author-meta$},
+    $endif$
+    $if(keywords)$
+        pdfkeywords={$for(keywords)$$keywords$$sep$, $endfor$},
+    $endif$
+    $if(colorlinks)$
+        colorlinks=true,
+        linkcolor=$if(linkcolor)$$linkcolor$$else$Maroon$endif$,
+        citecolor=$if(citecolor)$$citecolor$$else$Blue$endif$,
+        urlcolor=$if(urlcolor)$$urlcolor$$else$Blue$endif$,
+    $else$
+        pdfborder={0 0 0},
+    $endif$
+    breaklinks=true
+}
 %\urlstyle{same}  % don't use monospace font for urls
-$if(verbatim-in-note)$
-\VerbatimFootnotes % allows verbatim text in footnotes
-$endif$
-%$if(geometry)$
-%\usepackage[$for(geometry)$$geometry$$sep$,$endfor$]{geometry}
-%\usepackage[top=1.0in, bottom=1.25in, left=0.5in, right=0.5in, footskip=0.6in, bindingoffset=0.5in]{geometry}
-%$endif$
-$if(listings)$
-\usepackage{listings}
-\newcommand{\passthrough}[1]{#1}
-$endif$
-$if(lhs)$
-\lstnewenvironment{code}{\lstset{language=Haskell,basicstyle=\small\ttfamily}}{}
-$endif$
+
+
+
+% Fancy Verbatim
+% fancyvrb is automatically loaded here after \hypersetup.
+% DO NOT load the package manually
+% ================================
+
 $if(highlighting-macros)$
-$highlighting-macros$
+    $highlighting-macros$
 $endif$
-%$if(tables)$
-\usepackage{longtable,booktabs}
-% Fix footnotes in tables (requires footnote package)
-\IfFileExists{footnote.sty}{\usepackage{footnote}\makesavenoteenv{longtable}}{}
-%$endif$
-%$if(graphics)$
+
+
+
+% Graphics
+% ========
+
 \usepackage{graphicx,grffile}
 \makeatletter
 \def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
@@ -201,131 +142,220 @@ $endif$
 % margins by default, and it is still possible to overwrite the defaults
 % using explicit options in \includegraphics[width, height, ...]{}
 \setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
-%$endif$
-$if(links-as-notes)$
-% Make links footnotes instead of hotlinks:
-\DeclareRobustCommand{\href}[2]{#2\footnote{\url{#1}}}
-$endif$
-$if(strikeout)$
-\usepackage[normalem]{ulem}
-% avoid problems with \sout in headers with hyperref:
-\pdfstringdefDisableCommands{\renewcommand{\sout}{}}
-$endif$
-\setlength{\emergencystretch}{3em}  % prevent overfull lines
-\providecommand{\tightlist}{%
-  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
-$if(numbersections)$
-\setcounter{secnumdepth}{$if(secnumdepth)$$secnumdepth$$else$5$endif$}
+
+
+
+% Source Code Listings
+% ====================
+
+$if(listings)$
+    \usepackage{listings}
+    % Package listings require fancyvrb right now.
+    %
+    % When --listings argument is passed to pandoc, all code blocks will be
+    % wrapped within the listings environment.
+    \usepackage{fancyvrb}
+    \lstset{fancyvrb=false,
+        columns=fixed,              % compress character spaces
+    }
+    %\lstset{
+    %   fancyvrb=true,
+    %   basicstyle=\small,
+    %   fontadjust=true,
+    %   %columns=fixed,              % compress character spaces
+    %   basewidth={0.5em, 0.5em},    %   by this much
+    %   breakatwhitespace=true,
+    %   columns=fullflexible,
+    %   keepspaces=true,
+    %   keywordstyle=\color{NavyBlue},
+    %   linewidth=\textwidth,
+    %}
+    \newcommand{\passthrough}[1]{#1}
 $else$
-\setcounter{secnumdepth}{0}
-$endif$
-$if(beamer)$
-$else$
-$if(subparagraph)$
-$else$
-% Redefines (sub)paragraphs to behave more like sections
-\ifx\paragraph\undefined\else
-\let\oldparagraph\paragraph
-\renewcommand{\paragraph}[1]{\oldparagraph{#1}\mbox{}}
-\fi
-\ifx\subparagraph\undefined\else
-\let\oldsubparagraph\subparagraph
-\renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
-\fi
-$endif$
+    % When --listings argument is not passed to pandoc, we change all
+    % code block font sizes.
+    % How to set font size for all verbatims in Beamer presentation?
+    % https://tex.stackexchange.com/a/133443
+    %
+    % \makeatletter
+    % \def\verbatim@font{\small\ttfamily}
+    % \makeatother
+    %
+    % Change verbatim environment font
+    % 15.3 Verbatim (memoir class documentation)
+    \setverbatimfont{\ttfamily\small}
+    % Because fancyvrb package was loaded automatically and the following environment was
+    % defined when there is no --listing argument to pandoc, we "re-define" the environment
+    % to change the font size.
+    \DefineVerbatimEnvironment{Highlighting}{Verbatim}{
+        commandchars=\\\{\},
+        xleftmargin=6.7mm,
+        xrightmargin=0mm,
+        numbersep=8pt,
+        fontsize=\small,
+        baselinestretch=1.0
+        % Disable: not for production use
+        %frame=single,
+        %rulecolor=\color{LightGray},
+    }
+    
+    % "Re-define theFancyVerbLine to use a different font and size.
+    % See the fancyvrb package documentation for the original definition."
+    \def\theFancyVerbLine{\color{gray}\ttfamily\small\arabic{FancyVerbLine}}
+    \renewcommand*{\PreprocessorTok}[1]    {\textcolor{MediumVioletRed}{#1}}
+    \renewcommand*{\CommentTok}[1]         {\textcolor{DarkGreen}{#1}}
+    \renewcommand*{\StringTok}[1]          {\textcolor{SaddleBrown}{#1}}
+    \renewcommand*{\KeywordTok}[1]         {\textcolor{DarkBlue}{#1}}
+    \renewcommand*{\DataTypeTok}[1]        {\textcolor{Blue}{#1}}
+    \renewcommand*{\ControlFlowTok}[1]     {\textcolor{OrangeRed}{#1}}
+    \renewcommand*{\DecValTok}[1]          {\textcolor{Black}{#1}}
+    
+    %\renewcommand*{\KeywordTok}[1]         {\textcolor[rgb]{0.25,0.44,0.63}{#1}}
+    %\renewcommand*{\DataTypeTok}[1]        {\textcolor[rgb]{0.56,0.13,0.00}{#1}}
+    %\renewcommand*{\DecValTok}[1]          {\textcolor[rgb]{0.25,0.63,0.44}{#1}}
+    %\renewcommand*{\BaseNTok}[1]           {\textcolor[rgb]{0.25,0.63,0.44}{#1}}
+    %\renewcommand*{\FloatTok}[1]           {\textcolor[rgb]{0.25,0.63,0.44}{#1}}
+    %\renewcommand*{\ConstantTok}[1]        {\textcolor[rgb]{0.53,0.00,0.00}{#1}}
+    %\renewcommand*{\CharTok}[1]            {\textcolor[rgb]{0.25,0.44,0.63}{#1}}
+    %\renewcommand*{\SpecialCharTok}[1]     {\textcolor[rgb]{0.25,0.44,0.63}{#1}}
+    %\renewcommand*{\StringTok}[1]          {\textcolor[rgb]{0.73,0.40,0.53}{#1}}
+    %\renewcommand*{\VerbatimStringTok}[1]  {\textcolor[rgb]{0.25,0.44,0.63}{#1}}
+    %\renewcommand*{\SpecialStringTok}[1]   {\textcolor[rgb]{0.73,0.40,0.53}{#1}}
+    %\renewcommand*{\ImportTok}[1]          {#1}
+    %\renewcommand*{\CommentTok}[1]         {\textcolor[rgb]{0.38,0.63,0.69}{#1}}
+    %\renewcommand*{\DocumentationTok}[1]   {\textcolor[rgb]{0.73,0.13,0.13}{#1}}
+    %\renewcommand*{\AnnotationTok}[1]      {\textcolor[rgb]{0.38,0.63,0.69}{#1}}
+    %\renewcommand*{\CommentVarTok}[1]      {\textcolor[rgb]{0.38,0.63,0.69}{#1}}
+    %\renewcommand*{\OtherTok}[1]           {\textcolor[rgb]{0.00,0.44,0.13}{#1}}
+    %\renewcommand*{\FunctionTok}[1]        {\textcolor[rgb]{0.02,0.16,0.49}{#1}}
+    %\renewcommand*{\VariableTok}[1]        {\textcolor[rgb]{0.10,0.09,0.49}{#1}}
+    %\renewcommand*{\ControlFlowTok}[1]     {\textcolor[rgb]{0.00,0.44,0.13}{#1}}
+    %\renewcommand*{\OperatorTok}[1]        {\textcolor[rgb]{0.40,0.40,0.40}{#1}}
+    %\renewcommand*{\BuiltInTok}[1]         {#1}
+    %\renewcommand*{\ExtensionTok}[1]       {#1}
+    %\renewcommand*{\PreprocessorTok}[1]    {\textcolor[rgb]{0.74,0.48,0.00}{#1}}
+    %\renewcommand*{\AttributeTok}[1]       {\textcolor[rgb]{0.49,0.56,0.16}{#1}}
+    %\renewcommand*{\RegionMarkerTok}[1]    {#1}
+    %\renewcommand*{\InformationTok}[1]     {\textcolor[rgb]{0.38,0.63,0.69}{#1}}
+    %\renewcommand*{\WarningTok}[1]         {\textcolor[rgb]{0.38,0.63,0.69}{#1}}
+    %\renewcommand*{\AlertTok}[1]           {\textcolor[rgb]{1.00,0.00,0.00}{#1}}
+    %\renewcommand*{\ErrorTok}[1]           {\textcolor[rgb]{1.00,0.00,0.00}{#1}}
+    %\renewcommand*{\NormalTok}[1]          {#1}
 $endif$
 
-% set default figure placement to htbp
+
+
+% Footnotes
+% =========
+
+% Fix footnotes in tables (requires footnote package)
+\usepackage{footnote}
+\makesavenoteenv{longtable}
+% Make links footnotes instead of hotlinks
+\DeclareRobustCommand{\href}[2]{#2\footnote{\url{#1}}}
+% Add space before the footnote number in texts.
+\renewcommand{\thefootnote}{\space\arabic{footnote}}
+% Set vertical space between bottom of page text and start of footnote.
+\setfootins{8mm plus 4mm minus 2mm}{8mm plus 4mm minus 2mm}
+\renewcommand{\footnotesep}{9pt}
+% Redefine footnote rule
+% length=1.5in, rule thickness is 0.03pt and a vertical space of 2ex between
+% the rule and the first entry in the footnote
+\renewcommand{\footnoterule}{\noindent\rule{1.5in}{0.03pt}\vspace{1ex}}
 \makeatletter
-\def\fps@figure{htbp}
+\renewcommand\@makefntext[1]{\makebox[13pt][r]{\bfseries\@thefnmark.\,\,\,}#1}
 \makeatother
 
-$for(header-includes)$
-$header-includes$
-$endfor$
+
+
+% Other Packages
+% ==============
+
+\usepackage{makeidx}
+
 $if(lang)$
-\ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
-  \usepackage[shorthands=off,$for(babel-otherlangs)$$babel-otherlangs$,$endfor$main=$babel-lang$]{babel}
-$if(babel-newcommands)$
-  $babel-newcommands$
+    \ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
+        \usepackage[shorthands=off,$for(babel-otherlangs)$$babel-otherlangs$,$endfor$main=$babel-lang$]{babel}
+    $if(babel-newcommands)$
+        $babel-newcommands$
+    $endif$
+    \else
+        % load polyglossia as late as possible as it *could* call bidi if RTL lang (e.g. Hebrew or Arabic)
+        \usepackage{polyglossia}
+        \setmainlanguage[$polyglossia-lang.options$]{$polyglossia-lang.name$}
+    $for(polyglossia-otherlangs)$
+        \setotherlanguage[$polyglossia-otherlangs.options$]{$polyglossia-otherlangs.name$}
+    $endfor$
+    \fi
 $endif$
-\else
-  % load polyglossia as late as possible as it *could* call bidi if RTL lang (e.g. Hebrew or Arabic)
-  \usepackage{polyglossia}
-  \setmainlanguage[$polyglossia-lang.options$]{$polyglossia-lang.name$}
-$for(polyglossia-otherlangs)$
-  \setotherlanguage[$polyglossia-otherlangs.options$]{$polyglossia-otherlangs.name$}
-$endfor$
-\fi
-$endif$
+
+% Base direction of the document, either `rtl` (right-to-left) or `ltr`
+% (left-to-right). Pandoc: When using LaTeX for bidirectional documents, only
+% the `xelatex` engine is fully supported (use `--latex-engine=xelatex`).
 $if(dir)$
-\ifxetex
-  % load bidi as late as possible as it modifies e.g. graphicx
-  $if(latex-dir-rtl)$
-  \usepackage[RTLdocument]{bidi}
-  $else$
-  \usepackage{bidi}
-  $endif$
-\fi
-\ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
-  \TeXXeTstate=1
-  \newcommand{\RL}[1]{\beginR #1\endR}
-  \newcommand{\LR}[1]{\beginL #1\endL}
-  \newenvironment{RTL}{\beginR}{\endR}
-  \newenvironment{LTR}{\beginL}{\endL}
-\fi
-$endif$
-$if(natbib)$
-\usepackage[$natbiboptions$]{natbib}
-\bibliographystyle{$if(biblio-style)$$biblio-style$$else$plainnat$endif$}
-$endif$
-$if(biblatex)$
-\usepackage[$if(biblio-style)$style=$biblio-style$,$endif$$for(biblatexoptions)$$biblatexoptions$$sep$,$endfor$]{biblatex}
-$for(bibliography)$
-\addbibresource{$bibliography$}
-$endfor$
+    \ifxetex
+        % load bidi as late as possible as it modifies e.g. graphicx
+        $if(latex-dir-rtl)$
+            \usepackage[RTLdocument]{bidi}
+        $else$
+            \usepackage{bidi}
+        $endif$
+    \fi
+    \ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
+        \TeXXeTstate=1
+        \newcommand{\RL}[1]{\beginR #1\endR}
+        \newcommand{\LR}[1]{\beginL #1\endL}
+        \newenvironment{RTL}{\beginR}{\endR}
+        \newenvironment{LTR}{\beginL}{\endL}
+    \fi
 $endif$
 
-%$if(title)$
-%\title{$title$$if(thanks)$\thanks{$thanks$}$endif$}
-%$endif$
-%$if(subtitle)$
-%\providecommand{\subtitle}[1]{}
-%\subtitle{$subtitle$}
-%$endif$
-%$if(author)$
-%\author{$for(author)$$author$$sep$ \and $endfor$}
-%$endif$
-%$if(institute)$
-%\providecommand{\institute}[1]{}
-%\institute{$for(institute)$$institute$$sep$ \and $endfor$}
-%$endif$
-%\date{$date$}
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% DOWNLOAD!
-%\usepackage{datetime}
-%\usepackage{titlesec}
-%\usepackage{titletoc}
+% Trick to make memoir class work with fancyhdr
+\let\footruleskip\undefined 
+\usepackage{fancyhdr}
 
 \usepackage[nopar]{lipsum}
-\usepackage{makeidx}
-\makeindex["test"]
 
-\let\footruleskip\undefined % Trick to make memoir class work with fancyhdr
-\usepackage{fancyhdr}       % http://ctan.org/pkg/fancyhdr\usepackage{fancyhdr}
+\usepackage{amssymb,amsmath}
 
-\usepackage{color}
-\usepackage{listings}
-\newcommand{\passthrough}[1]{#1}
+% Use upquote if available, for straight quotes in verbatim environments.
+% Must be loaded after other fonts.
+\usepackage{upquote}
 
-\setsecnumdepth{subsubsection}
-\setsecheadstyle{\fontsize{15pt}{1pt}\usefont{T1}{put}{b}{n}}
-\setsubsecheadstyle{\fontsize{14pt}{1pt}\usefont{T1}{put}{b}{n}}
-\setsubsubsecheadstyle{\fontsize{13pt}{1pt}\usefont{T1}{put}{b}{n}}
+% Allow verbatim texts in footnotes
+% Error: Undefined control sequence
+% \VerbatimFootnotes
+
+%\usepackage{microtype}
+%\UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
+
+% \usepackage[option]{setspace}
+% options:
+%   singlespacing
+%   onehalfspacing
+%   doublespacing
+%
+% For the need of a different stretching factor, the spacing environment is
+% provided. It may be used like the following:
+%
+% \begin{spacing}{2.4}
+% This text is stretched by a factor of 2.4.
+% \end{spacing}
+\usepackage{setspace}
+%\setstretch{$linestretch$}
+\linespread{1}
+
+\usepackage{longtable,booktabs}
+
+% Strikeout a section of text with a horizontal line
+\usepackage[normalem]{ulem}
+% Avoid problems with \sout in headers with hyperref:
+\pdfstringdefDisableCommands{\renewcommand{\sout}{}}
+
+
+
+% Settings
+% ========
 
 % Traditional typography requires a larger space to indicate the end of a
 % sentence. Following along the same logic, TEX puts more space after an
@@ -337,48 +367,37 @@ $endif$
 % -----------------------------------------------------------------------------
 \frenchspacing
 
-\setlength{\emergencystretch}{3em}  % prevent overfull lines
+% Prevent overfull lines
+\setlength{\emergencystretch}{3em}
 
-% Block quote
-% -----------
+% Tight lists
+\providecommand{\tightlist}{%
+    \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}
+}
 
-% Footnote
-% --------
-% Set vertical space between bottom of page text and start of footnote.
-\setfootins{8mm plus 4mm minus 2mm}{8mm plus 4mm minus 2mm}
-% When first line of paragraphs are indented, this is also indented.
-\renewcommand{\footnotesep}{9pt}
+% Change list bullet characters
+%\renewcommand{\labelitemi}{\ding{42}}
+%\renewcommand{\labelitemii}{\ding{43}}
+%\renewcommand{\labelitemiii}{\ding{44}}
+%\renewcommand{\labelitemiv}{\ding{45}}
+
+% Italicize text in quote environments
+% The original code here was taken from memoir.cls in
+% /usr/share/texmf-dist/tex/latex/memoir/
+\renewenvironment*{quote}%
+                  {\list{}{\rightmargin\leftmargin}%
+                   \itshape\item[]}%
+                  {\endlist}
+
+% Set default figure placement to htbp
 \makeatletter
-\renewcommand\@makefntext[1]{\makebox[13pt][r]{\bfseries\@thefnmark.\,\,\,}#1}
+\def\fps@figure{htbp}
 \makeatother
 
-% Page styles
-% -----------
-% Redefinition of the plain style:
-\fancypagestyle{plain}{
-    \fancyhf{}  % clear all header and footer fields
-    \renewcommand{\headrulewidth}{0pt}
-    \ifdraftdoc
-    \fancyfoot[RE]{\rmfamily\small{(D)$version$}\space\space\normalsize\bfseries\thepage}
-    \fancyfoot[LO]{\rmfamily\normalsize\bfseries\thepage\space\space\small\normalfont{(D)$version$}}
-    \else
-    \fancyfoot[LO,RE]{\rmfamily\normalsize\bfseries\thepage}
-    \fi
-}
-\pagestyle{fancy}
-\renewcommand{\headrulewidth}{0pt}
-\renewcommand{\footrulewidth}{0.05pt}
-\fancyhf{} % clear all header and footer fields
-\renewcommand{\chaptermark}[1]{\markboth{#1}{}}
-\renewcommand{\sectionmark}[1]{\markright{#1}}
-\fancyfoot[LE]{\rmfamily\small\nouppercase\chaptername\space\thechapter:\space\leftmark}
-\fancyfoot[RO]{\rmfamily\small\nouppercase\space{\rightmark}}
-\ifdraftdoc
-\fancyfoot[RE]{\rmfamily\small{(D)$version$}\space\space\normalsize\bfseries\thepage}
-\fancyfoot[LO]{\rmfamily\normalsize\bfseries\thepage\space\space\small\normalfont{(D)$version$}}
-\else
-\fancyfoot[LO,RE]{\rmfamily\normalsize\bfseries\thepage}
-\fi
+\setsecnumdepth{subsubsection}
+\setsecheadstyle{\fontsize{15pt}{1pt}\usefont{T1}{put}{b}{n}}
+\setsubsecheadstyle{\fontsize{14pt}{1pt}\usefont{T1}{put}{b}{n}}
+\setsubsubsecheadstyle{\fontsize{13pt}{1pt}\usefont{T1}{put}{b}{n}}
 
 % Table of contents
 % -----------------
@@ -390,158 +409,228 @@ $endif$
 \renewcommand{\cftsectionfont}{\large}
 \renewcommand{\cftsubsectionfont}{\large}
 \setlength{\cftbeforechapterskip}{1.0em}
-\setlength{\cftbeforesectionskip}{0em}
-\setlength{\cftbeforesubsectionskip}{0em}
+\setlength{\cftbeforesectionskip}{0.3em}
+\setlength{\cftbeforesubsectionskip}{0.3em}
 \setlength{\cftsectionindent}{2.3em}
 \setlength{\cftsubsectionindent}{6.3em}
 
 % Chapter style
 % -------------
 \makechapterstyle{negerns}{
-  \setlength{\beforechapskip}{0pt}
-  \renewcommand*{\chapnamefont}{\raggedleft\fontsize{16.28pt}{24pt}\usefont{T1}{put}{m}{sc}}
-  \renewcommand*{\chapnumfont}{\raggedleft\fontsize{24.88pt}{25pt}\usefont{T1}{put}{m}{n}\,\,}
-  \renewcommand*{\chaptitlefont}{\raggedleft\fontsize{20.74pt}{25pt}\usefont{T1}{put}{b}{it}}
-  \renewcommand*{\printchapternonum}{
-    \vphantom{\printchaptername}
-     \vphantom{\chapnumfont 1}
-    \afterchapternum}
-  \renewcommand*{\printchaptertitle}[1]{
-    \vskip -4mm
-    \hrule\vskip\onelineskip \centering\chaptitlefont ##1\\[3.0ex]}
+    \setlength{\beforechapskip}{0pt}
+    \renewcommand*{\chapnamefont}{\raggedleft\fontsize{16.28pt}{24pt}\usefont{T1}{ptm}{m}{sc}}
+    \renewcommand*{\chapnumfont}{\raggedleft\fontsize{24.88pt}{25pt}\usefont{T1}{ptm}{m}{n}\,\,}
+    \renewcommand*{\chaptitlefont}{\raggedleft\fontsize{20.74pt}{25pt}\usefont{T1}{ptm}{b}{it}}
+    \renewcommand*{\printchapternonum}{
+        \vphantom{\printchaptername}
+        \vphantom{\chapnumfont 1}
+        \afterchapternum}
+    \renewcommand*{\printchaptertitle}[1]{
+        \vskip -4mm
+        \hrule\vskip\onelineskip \centering\chaptitlefont ##1\\[3.0ex]}
 }
 \chapterstyle{negerns}
 \chapterstyle{}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Epigraph
+% --------
+\setlength{\epigraphwidth}{4in}         % Widen epigraph width
+\epigraphtextposition{flushright}       % Rugged left
+\setlength{\epigraphrule}{0pt}          % No rule
+\epigraphfontsize{\normalsize}          % Normal size
+\setlength{\beforeepigraphskip}{0.0in}
+\setlength{\afterepigraphskip}{0.75in}
+
+% Page styles
+% -----------
+% Redefinition of the plain style:
+\fancypagestyle{plain}{
+    \fancyhf{}  % clear all header and footer fields
+    \renewcommand{\headrulewidth}{0pt}
+    \ifdraftdoc
+        \fancyfoot[RE]{\rmfamily\small{$version$ (Draft)}\space\space\normalsize\bfseries\thepage}
+        \fancyfoot[LO]{\rmfamily\normalsize\bfseries\thepage\space\space\small\normalfont{$version$ (Draft)}}
+    \else
+        \fancyfoot[LO,RE]{\rmfamily\normalsize\bfseries\thepage}
+    \fi
+}
+\pagestyle{fancy}
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\footrulewidth}{0.05pt}
+\fancyhf{} % clear all header and footer fields
+\renewcommand{\chaptermark}[1]{\markboth{#1}{}}
+\renewcommand{\sectionmark}[1]{\markright{#1}}
+\fancyfoot[LE]{\rmfamily\small\nouppercase\chaptername\space\thechapter:\space\leftmark}
+\fancyfoot[RO]{\rmfamily\small\nouppercase\space{\rightmark}}
+\ifdraftdoc
+    \fancyfoot[RE]{\rmfamily\small{$version$ (Draft)}\space\space\normalsize\bfseries\thepage}
+    \fancyfoot[LO]{\rmfamily\normalsize\bfseries\thepage\space\space\small\normalfont{$version$ (Draft)}}
+\else
+    \fancyfoot[LO,RE]{\rmfamily\normalsize\bfseries\thepage}
+\fi
+
+
+
+%\makeindex
+
+
+
+% =============================================================================
+% Begin document
+% =============================================================================
 
 
 
 \begin{document}
 
-
-
 % Title
+%
+% The \usefont usage was from Fonts and Encoding chapter of the
+% The LaTeX companion, 2nd Ed, 2004, p. 371.
 % -----
 $if(title)$
     \ifpdf
-      \pdfbookmark{Title Page}{$title$}
+        \pdfbookmark{Title Page}{$title$}
     \fi
     \newlength{\centeroffset}
-    \setlength{\centeroffset}{-0.5\oddsidemargin}
-    \setlength{\centeroffset}{0.60\evensidemargin}
+    %\setlength{\centeroffset}{-0.5\oddsidemargin}
+    %\setlength{\centeroffset}{0.60\evensidemargin}
     \thispagestyle{empty}
-    \vspace*{10em}
+    \vspace*{2.25in}
     \noindent\hspace*{\centeroffset}\makebox[0pt][l]{\begin{minipage}{\textwidth}
     \flushright
     {
-        %
-        % Utopia Bold appears thicker than ptm when font sizes are matched with
-        % text widths.
-        %
-        %   {\fontfamily{ptm}\selectfont\bfseries\LARGE{$title$}\\}
-        %   {\fontsize{18.5pt}{24pt}\usefont{T1}{ptm}{b}{n} {$title$}\\}
-        %
-        % The \usefont usage was from Fonts and Encoding chapter of the
-        % The LaTeX companion, 2nd Ed, 2004, p. 371.
-        {\fontsize{17.28pt}{25pt}\usefont{T1}{put}{b}{n} {$title$}\\}
+        {\fontsize{20.28pt}{22pt}\usefont{T1}{ptm}{b}{n} $title$\\}
         $if(subtitle)$
-            %
-            % Subtitle using ptm font:
-            %
-            %   {\fontfamily{ptm}\selectfont\bfseries\LARGE\itshape{$subtitle$}}
-            %
-            {\fontsize{16.28pt}{25pt}\usefont{T1}{put}{b}{it} {$subtitle$}}
+            {\fontsize{18.28pt}{22pt}\usefont{T1}{ptm}{m}{n}$subtitle$}
         $endif$
     }
-    \noindent\rule[-1ex]{\textwidth}{2pt}\\[2.8ex]
-    %
-    % Version and date using ptm
-    %
-    %   \large{$version$\\$date$\\[30ex]}
-    %
-    {\fontsize{12pt}{14pt}\usefont{T1}{put}{m}{n} {$version$}\\[0.2ex]$date$\\[30ex]}
-    %
-    % Author font using ptm
-    %
-    %   {\fontfamily{ptm}\selectfont\bfseries\large\itshape{$author$}\\}
-    %
+    \noindent\rule[-1ex]{\textwidth}{1pt}\\[2.8ex]
+    $if(client)$
+        {\fontsize{12pt}{14pt}\usefont{T1}{ptm}{m}{n}$version$\\$date$\\}
+        {\fontsize{14pt}{22pt}\usefont{T1}{ptm}{b}{n}$client$\\[15ex]}
+    $else$
+        {\fontsize{12pt}{14pt}\usefont{T1}{ptm}{m}{n}$version$\\$date$\\[22ex]}
+    $endif$
+    $if(subtitle)$
+        \vspace*{1.5in}
+    $else$
+        \vspace*{1.80in}
+    $endif$
     
-    {\fontsize{14pt}{14pt}\usefont{T1}{put}{b}{n} {$author$}\\}
-    {\fontfamily{ptm}\selectfont\large{$email$}}
-    %$for(author)$
-    %{\fontsize{14pt}{14pt}\usefont{T1}{put}{b}{n} {$author$}\\}
-    %$endfor$
+    $for(author)$
+        $if(author.name)$
+            {\fontsize{14pt}{24pt}\usefont{T1}{ptm}{b}{it}$author.name$\\}
+            $if(author.email)$
+                {\fontsize{12pt}{14pt}\usefont{T1}{ptm}{m}{n}$author.email$\\}
+            $endif$
+        $else$
+            {\fontsize{14pt}{24pt}\usefont{T1}{ptm}{b}{it}$author$\\}
+        $endif$
+    $endfor$
     
+    %{\fontsize{14pt}{14pt}\usefont{T1}{ptm}{b}{it}$author$\\}
+    %$if(distribution)$
+    %    {\fontsize{11pt}{14pt}\usefont{T1}{ptm}{m}{n}$email$\\[20ex]}
+    %    {\fontsize{12pt}{14pt}\usefont{T1}{ptm}{m}{it}Distribution:\\$distribution$}
+    %$else$
+    %    {\fontsize{11pt}{14pt}\usefont{T1}{ptm}{m}{n}$email$\\}
+    %$endif$
+
     \end{minipage}}
     \vspace{\stretch{2}}
-    \pagebreak
-    %$if(abstract)$
-    %    \begin{abstract}
-    %    $abstract$
-    %    \end{abstract}
-    %$endif$
+    %\pagebreak
 $endif$
 
-%\pagenumbering{roman}
 \frontmatter
-
-$for(include-before)$
-$include-before$
-$endfor$
-
 % Half title page
 %\copyright
 % Dedication page
 % Other preliminaries
 
+%$for(include-before)$
+%$include-before$
+%$endfor$
+
 %
 % Copyright
 %
 \thispagestyle{empty}
-\vspace*{0em}
 \noindent\hspace*{\centeroffset}\makebox[0pt][l]{\begin{minipage}{\textwidth}
 \flushleft
 {
     {\bfseries $title$\\}
     $if(subtitle)$
-    {\bfseries\itshape $subtitle$}
+        {\itshape $subtitle$}
     $endif$
-    \normalsize $version$\\[4ex]
-    \normalsize Copyright \textcopyright\space$copyrightyear$ $author$\\[1ex]
-    \normalsize License: $license$\\[1ex]
-    \normalsize $licensetext$\\[4ex]
-    \normalsize PDF version is produced with pdfTeX-1.40.18\\[4ex]
+    $if(version)$
+        \normalsize $version$\\
+    $endif$
+    \normalsize by\\
+    $for(author)$
+        $if(author.name)$
+            \normalsize $author.name$\\
+        $else$
+            \normalsize $author$\\
+        $endif$
+    $endfor$
+    \vspace*{2ex}
+    \normalsize $copyright$\\[2ex]
+    \includegraphics[keepaspectratio=true, width=2.5cm]{cc_by_nc_sa_40.eps}\\[2ex]
+    \normalsize License: $license$\\[2ex]
+    \normalsize $licensetext$\\[2ex]
+    \normalsize PDF is generated using pdfTeX-1.40.18 on \today.\\[2ex]
     $if(source)$
-    \normalsize $source$
+        \normalsize $source$
     $endif$
 }
 \end{minipage}}
-\vspace{\stretch{2}}
 \pagebreak
 
+% Start a new recto page
+\cleardoublepage
+
+%
+% Dedication
+%
+$if(dedication)$
+    \thispagestyle{empty}
+    \noindent\hspace*{\centeroffset}\makebox[0pt][l]{\begin{minipage}{\textwidth}
+    \center
+    {
+        \vspace*{2in}
+        \normalsize\itshape $dedication$
+    }
+    \end{minipage}}
+    \pagebreak
+$endif$
+
+%
+% Table of contents
+%
 $if(toc)$
 {
-$if(colorlinks)$
-\hypersetup{linkcolor=$if(toccolor)$$toccolor$$else$$endif$}
-$endif$
-%\setcounter{tocdepth}{$toc-depth$}
-\settocdepth{subsection}
-\cleardoublepage
-%\tableofcontents
-\begin{KeepFromToc} % Hide the ToC page entry in the ToC
-  \tableofcontents
-\end{KeepFromToc}
-\pagebreak
-\cleardoublepage
+    $if(colorlinks)$
+        \hypersetup{linkcolor=$if(toccolor)$$toccolor$$else$$endif$}
+    $endif$
+    %\setcounter{tocdepth}{$toc-depth$}
+    \settocdepth{subsection}
+    \cleardoublepage
+    %\tableofcontents
+    \begin{KeepFromToc} % Hide the ToC page entry in the ToC
+        \tableofcontents
+    \end{KeepFromToc}
+    \pagebreak
+    \cleardoublepage
 }
 $endif$
 
 $if(lot)$
-\listoftables
+    \listoftables
 $endif$
+
 $if(lof)$
-\listoffigures
+    \listoffigures
 $endif$
 
 % Longer preliminaries
@@ -559,26 +648,30 @@ $body$
 \backmatter
 
 $if(natbib)$
-$if(bibliography)$
-$if(biblio-title)$
-$if(book-class)$
-\renewcommand\bibname{$biblio-title$}
-$else$
-\renewcommand\refname{$biblio-title$}
+    $if(bibliography)$
+        $if(biblio-title)$
+            $if(book-class)$
+                \renewcommand\bibname{$biblio-title$}
+            $else$
+                \renewcommand\refname{$biblio-title$}
+            $endif$
+        $endif$
+        \bibliography{$for(bibliography)$$bibliography$$sep$,$endfor$}
+    $endif$
 $endif$
-$endif$
-\bibliography{$for(bibliography)$$bibliography$$sep$,$endfor$}
 
-$endif$
-$endif$
 $if(biblatex)$
-\printbibliography$if(biblio-title)$[title=$biblio-title$]$endif$
-
+    \printbibliography$if(biblio-title)$[title=$biblio-title$]$endif$
 $endif$
-$for(include-after)$
-$include-after$
 
-\printindex
+%$for(include-after)$
+%$include-after$
+%$endfor$
 
-$endfor$
+%\printindex
+
 \end{document}
+
+% =============================================================================
+% End document
+% =============================================================================
