--- a/latex-templates/doc/template_doc_a4.tex
+++ b/latex-templates/doc/template_doc_a4.tex
@@ -668,6 +668,15 @@ $endif$
     \includegraphics[keepaspectratio=true, width=2.5cm]{cc_by_nc_sa_40.eps}\\[1.2em]
     \normalsize License: $license$\\[1.2em]
     \normalsize $licensetext$\\[1.2em]
+    $if(license_attribution)$
+        \normalsize {\bfseries Attribution}\textemdash $license_attribution$\\[1.2em]
+    $endif$
+    $if(license_translations)$
+        \normalsize {\bfseries Translations}\textemdash $license_translations$\\[1.2em]
+    $endif$
+    $if(license_adaptations)$
+        \normalsize {\bfseries Adaptationss}\textemdash $license_adaptations$\\[1.2em]
+    $endif$
 
     \ifxetex
         \normalsize PDF is generated using XeTeX \the\eTeXversion\eTeXrevision-\the\XeTeXversion\XeTeXrevision\space on \today.
