Do not render urls in monospace font

--- a/latex-templates/doc/template_doc_us.tex
+++ b/latex-templates/doc/template_doc_us.tex
@@ -122,7 +122,8 @@
     $endif$
     breaklinks=true
 }
-%\urlstyle{same}  % don't use monospace font for urls
+% Don't use monospace font for urls
+\urlstyle{same}
 
 
 
